[package]
name = "mapky-nexus-plugin"
version = "0.2.0-alpha.1"
edition = "2021"
description = "Mapky domain plugin for Pubky Nexus — indexes /pub/mapky.app/ events into Neo4j and exposes a spatial REST API"
homepage = "https://mapky.app"
repository = "https://github.com/gillohner/mapky-nexus-plugin"
readme = "README.md"
license = "MIT"
keywords = ["pubky", "nexus", "mapky", "openstreetmap", "neo4j"]
categories = ["database", "web-programming"]

[dependencies]
nexus-common = { git = "https://github.com/gillohner/pubky-nexus.git", branch = "fix/universal-mapky-tags" }
mapky-app-specs = { git = "https://github.com/gillohner/mapky-app-specs.git", rev = "943e097fddce411e69a1dee054574a5537ca1469" }
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
deadpool-redis = "0.23"
futures = "0.3"
neo4rs = "0.8.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1"
urlencoding = "2.1"
utoipa = { version = "5.4.0", features = ["axum_extras"] }

[dev-dependencies]
anyhow = "1.0"
futures = "0.3"
nexus-watcher = { git = "https://github.com/gillohner/pubky-nexus.git", branch = "fix/universal-mapky-tags", features = ["testing"] }
pubky = "0.8.0"
pubky-app-specs = { version = "0.5.2", features = ["openapi"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-shared-rt = "0.1"

[[example]]
name = "write_testnet"
path = "examples/write_testnet.rs"
